--- a/Assets/Scripts/KiraraDirectBinder/Runtime/KiraraDirectBinder.asmdef
+++ b/Assets/Scripts/KiraraDirectBinder/Runtime/KiraraDirectBinder.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "KiraraDirectBinder.Runtime",
+    "name": "KiraraDirectBinder",
     "rootNamespace": "KiraraDirectBinder",
     "references": [],
     "includePlatforms": [],
