--- a/Assets/Scripts/KiraraLoopScroll/KiraraLoopScroll.asmdef
+++ b/Assets/Scripts/KiraraLoopScroll/KiraraLoopScroll.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "KiraraLoopScroll"
+    "name": "KiraraLoopScroll",
+    "rootNamespace": "KiraraLoopScroll",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
